:bug: fix an issue with survey link wrapping with longer content

--- a/src/components/feedback-banner/_feedback-banner.scss
+++ b/src/components/feedback-banner/_feedback-banner.scss
@@ -21,10 +21,8 @@
     @include clear();
     position: relative;
 
-    @media screen and (max-width: 480px) {
-      a {
-        white-space: nowrap;
-      }
+    a {
+      white-space: nowrap;
     }
 
   }
